2014-11-20  Tobias Brox  <tobias@redpill-linpro.com>
       * thrash-protect.py: major refactoring, cleaning up quite some mess and getting rid of quite some globals
       * thrash-protect.py: fixed a bug - when thrash_protect kicks in, it will at first almost always freeze a pid and then unfreeze it immediately afterwards without any sleep

2014-03-10  Tobias Brox  <tobias@redpill-linpro.com>
        * thrash-protect.py: found a silly print statement left behind from earlier debug rounds.
	* thrash-protect.py: bumped the version (patchlevel)

2014-02-26  Tobias Brox  <tobias@redpill-linpro.com>
	* README.md - elaborated a bit on the drawbacks/problems observed
	* thrash-protect.py (thrash_protect): doing a best-effort on running mlockall()

2014-01-14  Tobias Brox  <tobias@redpill-linpro.com>
	* general: version number bump - there shouldn't have been any 0.6.4, it should have been released as 0.7.
	* README.md: some minor docfixes
	* tests/thrash-bot.py: a bit of confusion on what version of this script I actually used when I managed to thrash the system.  At least now it seems to be eating up memory very fast instead of just spinning CPU.

2014-01-13  Tobias Brox  <tobias@redpill-linpro.com>
	* general: bump of version number to 0.6.4 (post-script: this was a mistake - correct version number should have been 0.7).
	* tests/: new directory, unfortunately rather empty
	* tests/thrash-bot.py: improved the thrash-bot, it consumes far less CPU and gobbles far more memory now
	* thrash-protect.py (general): tweaks and bugfixes to handle the new thrash_bot.py.  unfortunately I added lot more complexity. :-(
	* thrash-protect.py (general): debug hooks for randomly stopping processes even if there is no thrashing going on
	* thrash-protect.py (scan_processes): modified from logic to find the process with most pagefaults to "meta-logic" selecting an algorithm for finding which process to stop.